compute.tf

# Create AMI data source
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"]
}

# Create blue EC2 instance
resource "aws_instance" "blue_ec2" {

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.private_subnet1a_blue_env.id
  tags = {
    Name = "blue_ec2"
  }
  vpc_security_group_ids = [aws_security_group.sg_ec2_private.id]
  key_name               = var.key_name
  user_data              = base64encode(templatefile("user_data.sh", {}))
}

# Create green EC2 instance
resource "aws_instance" "green_ec2" {

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.private_subnet1a_blue_env.id
  tags = {
    Name = "green_ec2"
  }
  vpc_security_group_ids = [aws_security_group.sg_ec2_private.id]
  key_name               = var.key_name
  user_data              = base64encode(templatefile("user_data.sh", {}))
}


# Create bastion host in public subnet
resource "aws_instance" "bastion_host" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public_subnet1c_admin_env.id
  vpc_security_group_ids = [aws_security_group.sg_bastion_host.id]
  key_name               = var.key_name

  tags = {
    Name = "bastion_host"
  }
}
